crates/formatter/tests/snapshots/snapshots__synapse__main__delta__54__drop_legacy_tables.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2019 New Vector Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- we need to do this first due to foreign constraints
drop table if exists application_services_regex;

drop table if exists application_services;
drop table if exists transaction_id_to_pdu;
drop table if exists stats_reporting;
drop table if exists current_state_resets;
drop table if exists event_content_hashes;
drop table if exists event_destinations;
drop table if exists event_edge_hashes;
drop table if exists event_signatures;
drop table if exists feedback;
drop table if exists room_hosts;
drop table if exists server_tls_certificates;
drop table if exists state_forward_extremities;
