crates/formatter/tests/snapshots/snapshots__synapse__main__delta__54__stats.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2018 New Vector Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table stats_stream_pos (
	Lock char(1) not null unique default 'X', -- Makes sure this table only has one row.
	stream_id bigint,
	check (Lock = 'X')
);

insert into stats_stream_pos (stream_id) values (null);

create table user_stats (
	user_id text not null,
	ts bigint not null,
	bucket_size int not null,
	public_rooms int not null,
	private_rooms int not null
);

create unique index user_stats_user_ts on user_stats (user_id, ts);

create table room_stats (
	room_id text not null,
	ts bigint not null,
	bucket_size int not null,
	current_state_events int not null,
	joined_members int not null,
	invited_members int not null,
	left_members int not null,
	banned_members int not null,
	state_events int not null
);

create unique index room_stats_room_ts on room_stats (room_id, ts);

-- cache of current room state; useful for the publicRooms list
create table room_state (
	room_id text not null,
	join_rules text,
	history_visibility text,
	encryption text,
	name text,
	topic text,
	avatar text,
	canonical_alias text
	-- get aliases straight from the right table
);

create unique index room_state_room on room_state (room_id);

create table room_stats_earliest_token (
	room_id text not null,
	token bigint not null
);

create unique index room_stats_earliest_token_idx
	on room_stats_earliest_token (room_id);

-- Set up staging tables
insert into background_updates (update_name, progress_json)
values ('populate_stats_createtables', '{}');

-- Run through each room and update stats
insert into background_updates (update_name, progress_json, depends_on)
values ('populate_stats_process_rooms', '{}', 'populate_stats_createtables');

-- Clean up staging tables
insert into background_updates (update_name, progress_json, depends_on)
values ('populate_stats_cleanup', '{}', 'populate_stats_process_rooms');
